Added capstone 1 code

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row d-flex ">
 				<div class="col-lg-12 col-md-12">
 					<div class="home-image align-items-center">
-						<img class="rounded-circle" width="400" height="400" src="images/aboutimage.jpg" alt="image">
+						<img class="rounded-circle" width="400" height="400" src="images/aboutimage.JPG" alt="image">
 					</div>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-12">
 					<div class="about-img">
-						<img src="images/aboutimage.jpg" alt="image">
+						<img src="images/aboutimage.JPG" alt="image">
 					</div>
 				</div>
 				<div class="col-lg-7 col-md-12">
@@ -181,21 +181,21 @@
 			<div class="row d-flex">
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project1.jpg">
+						<img width="400" height="300" src="images/project1.JPG">
 						<h4>E-Commerce</h4>
 						<p class="text-justifyS">Ecommerce, also known as electronic commerce or internet commerce, refers to the buying and selling of goods or services using the internet, and the transfer of money and data to execute these transactions.</p>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project2.jpg">
+						<img width="400" height="300" src="images/project2.JPG">
 						<h4>Online Booking</h4>
 						<p class="text-justifyS">An online booking system is a software solution that allows potential guests to self-book and pay through your website, and other channels, while giving you the best tools to run and scale your operation, all in one place.</p>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project3.jpg">
+						<img width="400" height="300" src="images/project3.JPG">
 						<h4>Product landing page</h4>
 						<p>a product landing page is a page built to promote and sell just one specific product, to the exclusion of all else.</p>
 					</div>
@@ -210,14 +210,14 @@
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project5.jpg">
+						<img width="400" height="300" src="images/project5.JPG">
 						<h4>Trading App</h4>
 						<p>is a programme that allows investors and traders to position trades through financial intermediaries and to track accounts.</p>
 					</div>
 				</div>
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project6.jpg">
+						<img width="400" height="300" src="images/project6.JPG">
 						<h4>Online Code Editor</h4>
 						<p>Code editors are tools typically used by programmers and web developers to write and edit code. They are used for developing software and apps as well as other web development purposes.</p>
 					</div>
