Added capstone 1 code

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<div class="image-section">
-						<img width="400" height="300" src="images/project4.jpg">
+						<img width="400" height="300" src="images/project4.JPG">
 						<h4>Blog</h4>
 						<p>a blog is a regularly updated website or web page, and can either be used for personal use or to fulfill a business need.</p>
 					</div>
